# dmitrygr-einkTags

./: .gitmodules  Chroma.md  LICENSE.txt  README.md  Station.md  cc1101_vrs_cc111x.md  dump_all_luts.sh
IDA scripts/: 8051_dense_byte_switch.idc  8051_switch_with_ranges.idc
RfStudio/: README.md  typical_settings.xml
RfStudio/CC1101/: gs_typical.xml  ts_esp-idf-cc1101.xml
RfStudio/cc1110/: typical_settings.xml
Station/: .gitignore  Makefile  README.md  aes.c  aes.h  ccm.c  ccm.h  comms.c  comms.h  crt.c  imgStore.c  imgStore.h  led.c  led.h  main.c  msc.c  msc.h  nrf52.lkr  nrf52840.svd  printf.c  printf.h  radio.c  radio.h  station.jdebug  tiRadio.c  tiRadio.h  timebase.c  timebase.h  usb.c  usb.h
chroma_shell/: CMakeLists.txt  README.md  chroma_cmds.c  chroma_shell.h  chroma_shell_io.inl  cmds.h  jep106.c  jep106.inc  logging.c  logging.h  lut_dump.c  serial_shell.c  serial_shell.h  sfdp-parser.c
chroma_shell/linenoise/: Makefile  linenoise.c
chroma_shell/test_large_bwr/: EPD_Configuration.h  EPD_Driver.cpp  EPD_Driver.h  Image_970_Masterfm_01.c  Image_970_Masterfm_02.c  Image_970_Slavefm_01.c  Image_970_Slavefm_02.c  readme.md  test_large_bwr.cpp
common/: CobsFraming.c  CobsFraming.h  SerialFraming.c  SerialFraming.h  proxy_msgs.h
docs/: Chroma.md  Chroma29.md  Chroma42.md  Chroma74H_Plus.md  Station.md  footnote_test.md
docs/DSLogic/: 7_4_bwry_notes.txt  Chroma21_two_color.dsl  Chroma29_epd_end.dsl  Chroma29_epd_two_color.dsl  Chroma42_epd_two_color.dsl  Chroma42_epd_two_color_2.dsl  Chroma42_epd_two_color_3.dsl  Chroma42_epd_two_color_4.dsl  EPD_SPI.dsc  EPD_SPI_Chroma42.dsc  README.md  Solum_EL022F6W4A.dsl  cc1101.dsc
docs/DSLogic/spi_epd/: pd.py
firmware/: .gitignore  Makefile  aes.h  barcode.h  buildall.sh  ccm.c  ccm.h  chars.c  chars.h  comms.c  drawing.c  drawing.h  eeprom.c  eeprom.h  main.c  settings.c  sleep.h
firmware.old/ChromaFW/: Makefile  adc.c  asmUtil.c  ccm.c  ccm.h  chars.c  comms.c  comms.h  main.c  printf.c  radio.c  screen.h  screenEink29.c  screenEink74.c  screenLcd.c  screenRaw.h  settings.h  sleep.c  timer.h  u1private.c
firmware.old/solum_BW_4.2_fw/: ccm.c  ccm.h  chars.c  chars.h  comms.c  comms.h  display.c  display.h  eeprom.h  fw.h  heap.c  heap.h  main.c  mz100.h  proto.h  settings.c  settings.h  timer.c  timer.h  util.c  util.h
firmware/board/: boardChroma.c  boardCommon.h  boardZBS29common.c
firmware/common/: asmUtil.h  barcode.c  comms.c  comms.h  drawing.c  printf.h  proto.h  wdt.h
firmware/kiss_radio/: Makefile  appFHSSNIC.c  appFHSSNIC.lk  appSniff.lk  cc1110_spicom.c  global.c
firmware/main/: Makefile  buildall.sh  main.c
firmware/make/: common.mk  rules.mk
firmware/proxy/: Makefile  main.c
firmware/rfcat/: Makefile  README.md  appFHSSNIC.lk
firmware/soc/: radioCommon.h
imgTools/: bmp2grays.c
sdcc/: .gitignore  README.md  build_sdcc.sh  setup_sdcc.sh  unset_sdcc.sh
uartTool/: CMakeLists.txt  main.c  transport.c  transport.h  transportSerial.c
vs/: .gitignore  chroma29r-old.vpj  chroma29r.vpj  chroma_shell.vpj  kiss_radio.vpj  proxy.vpj  rfcat.vpj
(+100 files in other folders)
